# remnawave-vpn-orchestrator

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: ac0841f5b1fd_создание_таблиц_clients_и_operations.py
src/app/: __init__.py  config.py  main.py
src/app/api/: __init__.py  dependencies.py
src/app/api/v1/: __init__.py  clients.py  operations.py  router.py
src/app/database/: __init__.py  session.py
src/app/exceptions/: __init__.py  handlers.py
src/app/models/: __init__.py  base.py  client.py  operation.py
src/app/repositories/: __init__.py  client.py  operation.py
src/app/schemas/: __init__.py  client.py  operation.py
src/app/services/: client.py  remnawave.py
tests/: conftest.py  test_client_service.py
